<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="#FFA500"
        android:id="@+id/layoutCart">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imgClear"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_weight="1"
                android:src="@drawable/clear"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cart"
            android:id="@+id/tvProductInCart"
            android:textColor="@android:color/white"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/imgCommentCart"
            android:src="@drawable/comment_cart"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layoutCart"
        android:background="@color/lightGray">

        <!--Customer in cart-->
        <RelativeLayout
            android:id="@+id/layoutCustomerCart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_customer_height"
            android:background="@android:color/white"
            >
            <ImageView
                android:id="@+id/imgUserCart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:src="@drawable/user"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/tvInfoUser"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@id/imgUserCart"
                android:text="@string/add_customer"
                android:layout_centerVertical="true"
                android:gravity="center"/>
            <Button
                android:id="@+id/btnDeleteCustomerCart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:text="@string/delete_customer"
                android:background="@android:color/holo_red_dark"
                android:layout_margin="@dimen/button_delete_margin"
                android:visibility="gone"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_height="300dp"
            android:layout_width="match_parent"
            >

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvProductInCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/layout_customer_checkout_padding"
                >
            </android.support.v7.widget.RecyclerView>
        </ScrollView>
    </LinearLayout>
    <!--Hold cart, check out cart-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_alignParentBottom="true"
            />
        <!--Sub Total-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_customer_height"
            android:padding="@dimen/layout_customer_checkout_padding"

            android:background="@android:color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/sub_total"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tvTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="0000"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:gravity="center"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_alignParentBottom="true"
            />

        <!--Discount cart-->
        <RelativeLayout
            android:id="@+id/layoutAddDiscount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_customer_height"
            android:background="@color/light_grey"
            android:visibility="visible"
            android:padding="@dimen/layout_customer_checkout_padding">
            <TextView
                android:id="@+id/tvNameDiscountCart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/add_cart_discount"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tvDiscountAmountCart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/amount"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/btnAddCartDiscount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/add_plus"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_alignParentBottom="true"
            />

        <!--Tax-->
        <RelativeLayout
            android:id="@+id/layoutTax"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_customer_height"
            android:background="@color/light_grey"
            android:padding="@dimen/layout_customer_checkout_padding"
            android:visibility="gone">
            <TextView
                android:id="@+id/tvNameTax"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_tax"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tvAmountTax"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tax"
                android:layout_alignParentRight="true"
                android:gravity="center" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutCheckout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/layout_customer_height"
                android:layout_weight="1"
                android:id="@+id/btnOnHold"
                android:background="@drawable/button"
                android:text="@string/hold_cart"
                android:layout_marginRight="5dp"
                android:textColor="@android:color/white"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/layout_customer_height"
                android:layout_weight="4"
                android:id="@+id/btnCheckoutCart"
                android:background="@drawable/button"
                android:text="@string/check_out_cart"
                android:enabled="false"
                android:clickable = "false"
                android:textColor="@android:color/white" />
        </LinearLayout>
        </LinearLayout>
</RelativeLayout>