<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="150dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="$ 410"
        android:id="@+id/tvGrandTotal"
        android:textColor="#FFA500"
        android:layout_marginTop="20dp"
        android:textSize="60dp"
        android:layout_gravity="center_horizontal" />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/success"
            android:id="@+id/imgSuccess" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/success_order"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:id="@+id/tvSuccess" />


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/success_order_id"
            android:textSize="20dp"
            android:id="@+id/tvOrder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=" #12345678"
            android:textSize="20dp"
            android:id="@+id/tvOrderId" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="#767575"
        android:layout_alignParentBottom="true"
        />

    <Button
        android:layout_width="500dp"
        android:layout_height="120dp"
        android:text="@string/start_new_order"
        android:id="@+id/btnStartNewOrder"
        android:background="@drawable/button"
        android:textSize="30dp"
        android:textColor="#FFFF"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>